--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,19 @@ body {
 
 /* --------------------------------------------------------------------------------------- */
 /* sobre */
+h1 {
+margin-top: 0.2em;
+  text-align: center;
+  padding: 0.2em;
+  transition: 1s;  
+}
+
+h1:hover {
+    color: #fff;
+    background-color: #000080;
+    border-radius: 0.5em;
+}
+
 #sobre {
     display: flex;
     flex-direction: column;
