--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ svg {
     align-items: center;
     justify-content: space-between;
     background-color: #000080;
+    width: 100%;
 }
 
 .item {
@@ -87,9 +88,8 @@ svg {
 }
 
 #div-img-kwcold {
-    width: 400px;
+    width: 40%;
     height: 150px;
-    margin-left: 1%;
 }
 
 #logo {
@@ -97,18 +97,12 @@ svg {
     height: 100%;
 }
 
-.div-itens{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-}
-
 .div-itens-central{
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    width: 92%;
+    justify-content: center;
+    margin: 0!important;
+    width: 85%;
 }
 
 .div-itens-central li {
@@ -121,6 +115,14 @@ svg {
 
 .div-itens-central li:hover {
     border: #fff dashed 1px ;
+}
+
+.div-itens{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 60%;
+    margin: 0 1em !important;
 }
 
 #navbarSupportedContent .nav-item .nav-link {
@@ -343,6 +345,9 @@ address svg {
 /* --------------------------------------------------------------------------------------- */
 /* media queries */
 @media (max-width: 992px){
+    .navbar-toggler {
+        margin: 0 0 0.5em 0;
+    }
     svg {
         color: #000;
     }
@@ -371,8 +376,11 @@ address svg {
         align-items: flex-end;
     }
 
-    .div-itens-central {
-        width: 100%;
+    .navbar-collapse {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
 
     .div-itens-central li {
@@ -402,6 +410,18 @@ address svg {
         
         #direitos {
             font-size: 10px;
+        }
+
+        #div-img-kwcold {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+
+        #logo {
+            width: 100%;
+            height: 150px
         }
     }
 }
