incluido serviço de venda e reforma de equipamentos com cards e imagens dos produtos

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,18 @@ h1:hover {
     text-align: justify;
 }
 
+.img-vendas {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.card-text {
+    color: #800000;
+}
+
 /* --------------------------------------------------------------------------------------- */
 /* clientes */
 .cli {
