--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ h1:hover {
 
 .img-vendas {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     padding-left: 0;
     padding-right: 0;
@@ -242,6 +242,32 @@ h1:hover {
 
 .card-text {
     color: #800000;
+}
+
+.div-vendas{
+    display: flex;
+    justify-content: space-between;
+}
+
+.div-img-vendas{
+    display: flex;
+}
+
+.card-vendas {
+    cursor: pointer;
+    filter: grayscale(5);
+    transition: transform 2s;
+    transform: translateX(0) scale(1);
+    transform: 2s;
+}
+
+.card-vendas:hover{
+    filter: grayscale(0);
+    transform: scale(1.05);
+}
+
+.text-vendas{
+    margin-bottom: 1em;
 }
 
 /* --------------------------------------------------------------------------------------- */
@@ -420,6 +446,7 @@ address svg {
         justify-content: center;
     }
 
+
     @media (max-width: 500px){
         .endereco h4 {
             font-size: 16px;
@@ -434,6 +461,15 @@ address svg {
         
         #direitos {
             font-size: 10px;
+        }
+
+        .div-vendas {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .card-vendas {
+            margin-bottom: 1em;
         }
     }
 }
